--- a/classification_config.json
+++ b/classification_config.json
@@ -1,15 +1,20 @@
 {
   "KAT": [
-    "2",
     "1",
+    "2",
     "3",
     "4",
     "5",
     "6",
-    "7"
+    "7",
+    "8"
   ],
   "YUMUSAK KAT": [
-    "VAR",
-    "YOK"
+    "YK_VAR",
+    "YK_YOK"
+  ],
+  "AGIR CIKMA": [
+    "AC_VAR",
+    "AC_YOK"
   ]
 }
